--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -3,9 +3,8 @@
     <div class="row text-center" style="position: relative;">
 
         <div style="position: absolute; right: 15px;">
-           <button type="button" class="btn btn-rented">Add</button>
-           <button type="button" class="btn btn-rented">Edit</button>
            <button type="button" class="btn btn-rented">Save</button>
+           <a href="#/owners/add-property/3" class="arrow">Next</a>
         </div>
 
         <h1 style="margin-top: 0px;">Property 1</h1>
@@ -19,15 +18,15 @@
 
            <div class="col-sm-6">
                <div class="form-group">
-                   <label class="col-sm-4 control-label">City</label>
+                   <label class="col-sm-4 control-label">Street</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.city">
+                      <input class="form-control input-lg" type="text" ng-model="property.street">
                    </div>
                </div>
                <div class="form-group">
-                   <label class="col-sm-4 control-label">State</label>
+                   <label class="col-sm-4 control-label">City</label>
                    <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.state">
+                      <input class="form-control input-lg" type="text" ng-model="property.city">
                    </div>
                </div>
                <div class="form-group">
@@ -40,15 +39,15 @@
 
            <div class="col-sm-6">
                <div class="form-group">
-                   <label class="col-sm-4 control-label">Street</label>
-                   <div class="col-sm-8">
-                      <input class="form-control input-lg" type="text" ng-model="property.street">
-                   </div>
-               </div>
-               <div class="form-group">
                    <label class="col-sm-4 control-label">Apt. number</label>
                    <div class="col-sm-8">
                       <input class="form-control input-lg" type="text" ng-model="property.aptNumber">
+                   </div>
+               </div>
+               <div class="form-group">
+                   <label class="col-sm-4 control-label">State</label>
+                   <div class="col-sm-8">
+                      <input class="form-control input-lg" type="text" ng-model="property.state">
                    </div>
                </div>
            </div>
@@ -64,8 +63,7 @@
 
            <div class="col-sm-6">
                <div class="form-group">
-                   <label class="col-sm-8 control-label" ng-hide="property.dynamicPricing">Monthly Rent</label>
-                   <label class="col-sm-8 control-label" ng-show="property.dynamicPricing">Suggested Monthly Rent</label>
+                   <label class="col-sm-8 control-label">Suggested Monthly Rent</label>
                    <div class="col-sm-4">
                       <input class="form-control input-lg" type="number" ng-model="property.targetRent">
                    </div>
@@ -135,7 +133,7 @@
            <div class="col-sm-6">
                <div class="form-group">
                    <label class="col-sm-2 control-label">Pets</label>
-                   <div class="col-sm-6">
+                   <div class="col-sm-10">
                      <div class="row" style="height: 49px">
                          <div class="checkbox col-sm-6">
                             <label class="control-label">
@@ -143,7 +141,6 @@
                             </label>
                          </div>
                          <div class="col-sm-6">
-                            <input class="form-control input-lg" type="number" ng-model="property.dogs" ng-show="property.allowDogs" placeholder="#">
                          </div>
                      </div>
                      <div class="row" style="height: 49px">
@@ -153,17 +150,16 @@
                             </label>
                          </div>
                          <div class="col-sm-6">
-                            <input class="form-control input-lg" type="number" ng-model="property.cats" ng-show="property.allowCats" placeholder="#">
                          </div>
                      </div>
                      <div class="row" style="height: 49px">
-                         <div class="checkbox col-sm-6">
+                         <div class="checkbox col-sm-4">
                             <label class="control-label">
                               <input type="checkbox" ng-model="property.allowOther"> Other
                             </label>
                          </div>
-                         <div class="col-sm-6">
-                            <input class="form-control input-lg" type="number" ng-model="property.other" ng-show="property.allowOther" placeholder="#">
+                         <div class="col-sm-8">
+                            <input class="form-control input-lg" type="text" ng-model="property.other" ng-show="property.allowOther" placeholder="Ex. Turtle">
                          </div>
                      </div>
                    </div>
