--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -1,11 +1,18 @@
 <div class="vertical-buffer-xl">
 
     <div class="row text-center" style="position: relative; margin-bottom: 80px;">
-        <h1>Qualify for Tenants</h1>
+        <h1>Qualify Tenants</h1>
     </div>
 
     <ol style="font-size: 24px;">
-        <li><a href="#" class="arrow">Lorem ipsum a</a></li>
-        <li><a href="#" class="arrow">Esta con les Tues eas a</a></li>
+        <li> Invite a tenant
+            <div class="input-group vertical-buffer">
+              <input type="email" class="form-control" placeholder="tenant@example.com, tenant2@example.com" ng-model="inviteAddress">
+              <span class="input-group-btn">
+                <button class="btn btn-rented" type="button">Invite!</button>
+              </span>
+            </div><!-- /input-group --> 
+        </li>
+        <li><a href="http://www.craigslist.org/about/sites#US" class="arrow" target="_blank">Post on Craigslist</a></li>
     </ol>
 </div>
