--- a/angular/src/less/variables.less
+++ b/angular/src/less/variables.less
@@ -758,9 +758,9 @@
 //** Badge background color in active nav link
 @badge-active-bg:             #fff;
 
-@badge-font-weight:           bold;
-@badge-line-height:           1;
-@badge-border-radius:         10px;
+@badge-font-weight:           300;
+@badge-line-height:           1.5;
+@badge-border-radius:         5px;
 
 
 //== Breadcrumbs
