--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -4,7 +4,7 @@
 
         <div style="position: absolute; right: 15px;">
            <button type="button" class="btn btn-rented">Save</button>
-           <a href="#/owners/add-property/3" class="arrow">Next</a>
+           <a href="#/owners/add-property/2" class="arrow" style="padding-left: 30px;">Next</a>
         </div>
 
         <h1 style="margin-top: 0px;">Property 1</h1>
@@ -83,9 +83,9 @@
                       <select class="form-control input-lg" ng-model="property.leaseTerm">
                           <option value="">Select...</option>
                           <option value="1">Month-to-month</option>
-                          <option value="12">1 year</option>
-                          <option value="24">2 years</option>
-                          <option value="36">3 years</option>
+                          <option value="12">upto 1 year</option>
+                          <option value="24">upto 2 years</option>
+                          <option value="36">upto 3 years</option>
                       </select>
                    </div>
                </div>
