Updated Owner/Manager on boarding

--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -13,6 +13,18 @@
               </span>
             </div><!-- /input-group --> 
         </li>
-        <li><a href="http://www.craigslist.org/about/sites#US" class="arrow" target="_blank">Post on Craigslist</a></li>
+        <li>
+            <a href="http://www.craigslist.org/about/sites#US" class="arrow" target="_blank">Post on Craigslist</a>
+            <div class="vertical-buffer">
+                <table class="table table-bordered table-condensed" style="width:100%">
+                    <tr class="success">
+                        <td><h6><a href="#">Firebase link to property</a></h6></td>
+                    </tr>
+                    <tr>
+                        <td><h6>Copy and past the link above into your Craigslist Ad</h6></td>
+                    </tr>
+                </table>
+            </div>
+        </li>
     </ol>
 </div>
