--- a/angular/src/app/owner/partials/verify-profile.tpl.html
+++ b/angular/src/app/owner/partials/verify-profile.tpl.html
@@ -1,15 +1,16 @@
 <div class="vertical-buffer-xl">
 
     <div class="row text-center" style="position: relative; margin-bottom: 80px;">
-        <div style="position: absolute; right: 40px;">
-           <a href="#/owners/add-property/3" class="arrow">Next</a>
+        <div class="col-sm-10">
+            <h1 style="margin-top: -10px">Owner/Manager Verification</h1>
+        </div>
+        <div class="col-sm-2" style="position: absolute; right: 0px;">
+           <a href="#/owners/add-property/3" class="arrow" >Next</a>
         </div>
 
-        <h1>Credit Check</h1>
+        
     </div>
 
-    <p class="text-lg" style="margin-bottom: 70px;">Thank you for completing your profile, Rented Team will contact you shortly. 
-    Your offer will still be submitted.</p>
+    <p class="text-lg" style="margin-bottom: 70px;">Thank you for registering. We have verified your profile and you are ready to qualify tenants!</p>
     
-    <a href="#/owners/add-property/3" class="text-lg">Continue to Apply</a>
 </div>
