--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -2,9 +2,9 @@
 
     <div class="row text-center" style="position: relative;">
 
-        <div style="position: absolute; right: 15px;">
+        <div class="col-sm-3" style="position: absolute; right: 0px">
            <button type="button" class="btn btn-rented">Save</button>
-           <a href="#/owners/add-property/3" class="arrow">Next</a>
+           <a href="#/owners/add-property/2" class="arrow" style="left: 30px">Next</a>
         </div>
 
         <h1 style="margin-top: 0px;">Property 1</h1>
@@ -84,8 +84,8 @@
                           <option value="">Select...</option>
                           <option value="1">Month-to-month</option>
                           <option value="12">1 year</option>
-                          <option value="24">2 years</option>
-                          <option value="36">3 years</option>
+                          <option value="24">1, 2 years</option>
+                          <option value="36">1, 2, 3 years</option>
                       </select>
                    </div>
                </div>
@@ -123,7 +123,7 @@
                    </div>
                </div>
                <div class="form-group" ng-show="property.allowDogs || property.allowCats || property.allowOther">
-                   <label class="col-sm-6 control-label">Pet Deposit</label>
+                   <label class="col-sm-6 control-label">Pet Deposit per Pet</label>
                    <div class="col-sm-6">
                       <input class="form-control input-lg" type="number" ng-model="property.securityDeposit">
                    </div>
