fix input-group, ready-to-qualify

--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -6,7 +6,7 @@
 
     <ol style="font-size: 24px;">
         <li> Invite a tenant
-            <div class="input-group vertical-buffer">
+            <div class="input-group input-group-lg vertical-buffer">
               <input type="email" class="form-control" placeholder="tenant@example.com, tenant2@example.com" ng-model="inviteAddress">
               <span class="input-group-btn">
                 <button class="btn btn-rented" type="button">Invite!</button>
