--- a/angular/src/app/partials/circular-bar.tpl.html
+++ b/angular/src/app/partials/circular-bar.tpl.html
@@ -1,4 +1,4 @@
-<div class="radial-progress" data-progress="{{progress}}">
+<div class="radial-progress center" data-progress="{{progress}}">
     <div class="circle">
         <div class="mask full">
             <div class="fill"></div>
