--- a/angular/src/less/dashboard.less
+++ b/angular/src/less/dashboard.less
@@ -57,6 +57,15 @@
            font-size: 50%;
          }
 
+         p {
+          color: #aeaeae;
+          font-size: 24px;
+          text-align: center;
+         }
+
     }
 
+    .calendar {
+      padding-left: 30px;
+    }
 }
