--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -197,9 +197,56 @@
                 <div ng-repeat="progress in [expenses.occupancyRate]" ng-include="'partials/circular-bar.tpl.html'"></div>
               </div>
            </div>
+           <div class="row expenses">
+              <div class="col-sm-3">
+                 <p>Upcoming Vacancies</p>
+              </div>
+              <div class="col-sm-3">
+                 <p>Rents Paid</p>
+              </div>
+              <div class="col-sm-3">
+                 <p>Expense Ratio</p>
+              </div>
+              <div class="col-sm-3">
+                 <p>Occupancy Rate</p>
+              </div>
+           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 calendar">
            <h5>Calendar</h5>
+           <div class="row">
+             <div id="mini-clndr" class="col-sm-12">
+             <script id="mini-clndr-template" type="text/template">
+
+            <div class="controls">
+              <div class="clndr-previous-button">&lsaquo;</div><div class="month"><%= month %> <%= year %></div><div class="clndr-next-button">&rsaquo;</div>
+            </div>
+
+            <div class="days-container">
+              <div class="days">
+                <div class="headers">
+                  <% _.each(daysOfTheWeek, function(day) { %><div class="day-header"><%= day %></div><% }); %>
+                </div>
+                <% _.each(days, function(day) { %><div class="<%= day.classes %>" id="<%= day.id %>"><%= day.day %></div><% }); %>
+              </div>
+              <div class="events">
+                <div class="headers">
+                  <div class="x-button">x</div>
+                  <div class="event-header">EVENTS</div>
+                </div>
+                <div class="events-list">
+                  <% _.each(eventsThisMonth, function(event) { %>
+                    <div class="event">
+                      <a href="<%= event.url %>"><%= moment(event.date).format('MMMM Do') %>: <%= event.title %></a>
+                    </div>
+                  <% }); %>
+                </div>
+              </div>
+            </div>
+
+          </script>
+             </div>
+           </div>
         </div>
     </div>
 
