--- a/angular/src/less/dashboard.less
+++ b/angular/src/less/dashboard.less
@@ -46,7 +46,7 @@
     }
 
     .inbox {
-      padding-left: 30px;
+//      padding-left: 30px;
     }
 
     .expenses {
@@ -66,6 +66,6 @@
     }
 
     .calendar {
-      padding-left: 30px;
+ //     padding-left: 30px;
     }
 }
