--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="page-title">Recent Properties</h1>
+                <h1>Recent Properties</h1>
 
                 <h3 ng-show-auth="'logout'">Take a tour</h3> 
 
