--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -1,11 +1,7 @@
-<div class="white-stripe" style="min-height: 543px; padding-top: 80px;">
+<div class="white-stripe" style="min-height: 543px;">
     <div class="container">
 
-            <div class="row">
-                <div class="col-sm-8 center text-center">
-                    <h1 style="margin-bottom: 36px;">Tenants Benefits</h1>
-                </div>
-            </div>
+            <h1>Tenants Benefits</h1>
 
             <div class="row">
                     <div class="col-sm-4 feature-icon">
