--- a/angular/src/less/home.less
+++ b/angular/src/less/home.less
@@ -20,6 +20,10 @@
 
   h1 {
     font-size: 40px;
+    margin-top: initial;
+    margin-bottom: initial;
+    float: initial;
+    text-align: initial;
   }
 
   h2 {
