--- a/angular/src/app/user/login.tpl.html
+++ b/angular/src/app/user/login.tpl.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" ng-hide="profile">
     <div class="row">
         <div class="col-sm-7 center">
-            <h1 class="page-title">Login</h1>
+            <h1>Login</h1>
             <ng-include src="'user/partials/loginform.tpl.html'"></ng-include>
         </div>
     </div> <!-- /.row -->
