--- a/angular/src/app/user/register.tpl.html
+++ b/angular/src/app/user/register.tpl.html
@@ -1,7 +1,7 @@
 <div class="container" ng-hide="profile">
     <div class="row">
         <div class="col-lg-11 center">
-            <h1 class="page-title">Register</h1>
+            <h1>Register</h1>
             <ng-include src="'user/partials/registerform.tpl.html'"></ng-include>
         </div>
     </div> <!-- /.row -->
