--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -40,12 +40,15 @@
      margin-right: auto;
 }
 
-h1.page-title {
-     width: 100%
-     display: block;
+h1 {
+     .center;
      text-align: center;
-     margin-top: 90px;   
-     margin-bottom: 60px;   
+     margin-top: 60px;   
+     margin-bottom: 50px;   
+}
+
+.row h1 {
+     margin-top: 0px;   
 }
 
 h5 {
