fix dashboard heading

--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -5,7 +5,7 @@
         <div class="row top-buffer-lg">
             <div class="col-sm-6 text-center center">
                 <h1>My Dashboard</h1>
-                <h2 style="color: #9d9d9d; margin-top: 0px;">{{time | date:'MMMM dd, yyyy hh:mm'}} {{ time | date:'a' | lowercase }}</h2>
+                <h2>{{time | date:'MMMM dd, yyyy hh:mm'}} {{ time | date:'a' | lowercase }}</h2>
             </div>
         </div>
 
