--- a/angular/src/less/dashboard.less
+++ b/angular/src/less/dashboard.less
@@ -1,5 +1,11 @@
 .dashboard {
 
+    h2 {
+      color: #9d9d9d;
+      font-size: 22px;
+      margin-top: 10px;
+    }
+
     .dashboard-counter {
        border-left: 4px solid #7c7c7c;
 
