--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -50,7 +50,7 @@
 <div class="container dashboard">
     <h5 class="top-buffer">Recent Offers</h5>
 
-    <div class="row offers">
+    <div class="row properties">
         <div class="col-sm-3">
             <img pl-holder="holder.js/238x158">
             <p><strong>Number of offers:</strong> 2</p>
