--- a/angular/src/app/owner/properties.tpl.html
+++ b/angular/src/app/owner/properties.tpl.html
@@ -1,3 +1,97 @@
 <div class="container">
-       <h1>Active Properties</h1>
+    <h1>Active Properties</h1>
+
+    <div class="row properties">
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+    </div>
+    <div class="row properties top-buffer-lg">
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+    </div>
+
+    <h1>Tenant Occupied</h1>
+
+    <div class="row properties bottom-buffer-lg">
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+        <div class="col-sm-3">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <button type="button" class="btn btn-rented">See More</button>
+        </div>
+    </div>
 </div>
