--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -123,6 +123,10 @@ a[ng-click] {
   margin-bottom: 30px;
 }
 
+.bottom-buffer-lg {
+  margin-bottom: 60px;
+}
+
 .vertical-buffer {
   margin-top: 30px;
   margin-bottom: 30px;
