--- a/angular/src/less/properties.less
+++ b/angular/src/less/properties.less
@@ -41,3 +41,14 @@ body.loggedin .property-list-header {
   }
 
 }
+
+.row.properties {
+
+    img {
+       margin-bottom: 20px;
+    }
+
+    button {
+       margin-top: 10px;
+    }
+}
