--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -23,21 +23,21 @@
             </div>
             <div class="col-sm-7">
                 <div class="row">
-                    <div class="col-sm-offset-3 col-sm-3 dashboard-counter active">
-                        <p class="dashboard-counter-val">15</p>
-                        <p class="dashboard-counter-desc">Offers</p>
+                    <div class="col-sm-offset-3 col-sm-3 counter active">
+                        <p class="counter-val">15</p>
+                        <p class="counter-desc">Offers</p>
                     </div>
-                    <div class="col-sm-3 dashboard-counter">
-                        <p class="dashboard-counter-val">10</p>
-                        <p class="dashboard-counter-desc">Active Properties</p>
+                    <div class="col-sm-3 counter">
+                        <p class="counter-val">10</p>
+                        <p class="counter-desc">Active Properties</p>
                     </div>
-                    <div class="col-sm-3 dashboard-counter">
-                        <p class="dashboard-counter-val">15k</p>
-                        <p class="dashboard-counter-desc">Monthly Income</p>
+                    <div class="col-sm-3 counter">
+                        <p class="counter-val">15k</p>
+                        <p class="counter-desc">Monthly Income</p>
                     </div>
-                    <!--div class="col-sm-3 dashboard-counter">
-                        <p class="dashboard-counter-val">14 days</p>
-                        <p class="dashboard-counter-desc">Left for...</p>
+                    <!--div class="col-sm-3 counter">
+                        <p class="counter-val">14 days</p>
+                        <p class="counter-desc">Left for...</p>
                     </div-->
                 </div>
             </div>
