--- a/angular/src/app/owner/partials/menu-owner.tpl.html
+++ b/angular/src/app/owner/partials/menu-owner.tpl.html
@@ -3,7 +3,7 @@
        <li><a href="#/owners/add-property" class="first" ng-class="isActive('/owners/add-property')">Add Property</a></li>
        <li><a href="#/owners/dashboard" ng-class="isActive('/owners/dashboard')">My Dashboard</a></li>
        <li><a href="#/owners/properties" ng-class="isActive('/owners/properties')">My Properties</a></li>
-       <li><a href="#/owners/tenant" ng-class="isActive('/owners/tenant')">My Tenant</a></li>
+       <li><a href="#/owners/tenants" ng-class="isActive('/owners/tenants')">My Tenants</a></li>
        <li><a href="#/owners/profile" ng-class="isActive('/owners/profile')">My Profile</a></li>
     </ul>
 </div>
