--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -1,3 +1,105 @@
 <div class="container">
     <h1>My Profile</h1>
+
+    <form method="post" class="form-horizontal">
+
+        <div class="row">
+
+            <fieldset class="fieldset-required">
+               <legend>Contact</legend>
+               
+               <div class="col-sm-2">
+                  <img src="assets/img/avatar.png">
+               </div>
+
+               <div class="col-sm-5">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">First</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+                       </div>
+                   </div>
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Phone</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000">
+                       </div>
+                   </div>
+               </div>
+
+               <div class="col-sm-5">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Last</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson">
+                       </div>
+                   </div>
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">E-Mail</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com">
+                       </div>
+                   </div>
+               </div>
+            </fieldset>
+
+        </div>
+
+        <div class="row">
+
+            <fieldset class="fieldset-required">
+               <legend>Address</legend>
+
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Street</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="property.street">
+                       </div>
+                   </div>
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">City</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="property.city">
+                       </div>
+                   </div>
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Zip</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="property.zip">
+                       </div>
+                   </div>
+               </div>
+
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Apt. number</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="property.aptNumber">
+                       </div>
+                   </div>
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">State</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="property.state">
+                       </div>
+                   </div>
+               </div>
+
+            </fieldset>
+
+        </div>
+
+        <div class="row">
+
+            <fieldset class="fieldset-required">
+               <legend>Credit Info</legend>
+
+               <p class="text-lg">Lorem Ipsum</p>
+            </fieldset>
+
+        </div>
+
+    </form>
+
 </div>
