profile + better arrow links

--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -14,7 +14,7 @@
             </div><!-- /input-group --> 
         </li>
         <li>
-            <a href="http://www.craigslist.org/about/sites#US" class="arrow" target="_blank">Post on Craigslist</a>
+            <a href="http://www.craigslist.org/about/sites#US" class="next" target="_blank">Post on Craigslist</a>
             <div class="vertical-buffer">
                 <table class="table table-bordered table-condensed" style="width:100%">
                     <tr class="success">
