--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -1,7 +1,9 @@
 <div class="container">
-    <h1>My Profile</h1>
-
     <form method="post" class="form-horizontal">
+
+        <button type="button" class="btn btn-rented pull-right">Save</button>
+
+        <h1>My Profile</h1>
 
         <div class="row">
 
