--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -1,15 +1,11 @@
 <form method="post" class="form-horizontal vertical-buffer-xl">
 
-    <div class="row text-center" style="position: relative;">
-
-        <div class="col-sm-3" style="position: absolute; right: 0px">
-           <button type="button" class="btn btn-rented">Save</button>
-           <a href="#/owners/add-property/2" class="arrow" style="left: 30px">Next</a>
-        </div>
-
-        <h1 style="margin-top: 0px;">Property 1</h1>
-
+    <div class="pull-right">
+       <button type="button" class="btn btn-rented">Save</button>
+       <a href="#/owners/add-property/2" class="next" style="padding-left: 20px; vertical-align: sub;">Next</a>
     </div>
+
+    <h1 style="margin-top: 0px;">Property 1</h1>
 
     <div class="row">
 
