--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form method="post" class="form-horizontal">
 
-        <button type="button" class="btn btn-rented pull-right">Save</button>
+        <button type="button" class="btn btn-rented pull-right" ng-click="save()">Save</button>
 
         <h1>My Profile</h1>
 
