individual property status

--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -51,33 +51,12 @@
     <h5 class="top-buffer">Recent Offers</h5>
 
     <div class="row properties">
-        <div class="col-sm-3">
+        <div class="col-sm-3" ng-repeat="property in [1,2,3,4]">
             <img pl-holder="holder.js/238x158">
             <p><strong>Number of offers:</strong> 2</p>
             <p><strong>Highest offer:</strong> $5000</p>
             <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
+            <a href="#/owners/properties/xyz/status" class="btn btn-rented">See More</a>
         </div>
     </div>
 
