--- a/angular/src/app/owner/property-status.tpl.html
+++ b/angular/src/app/owner/property-status.tpl.html
@@ -9,21 +9,13 @@
             </div>
             <div class="col-sm-7">
                 <div class="row">
-                    <div class="col-sm-3 counter active">
-                        <p class="counter-val">80%</p>
-                        <p class="counter-desc">Occupancy Rate</p>
+                    <div class="col-sm-offset-6 col-sm-3 counter">
+                        <p class="counter-val">500,000</p>
+                        <p class="counter-desc">Highest Offer</p>
                     </div>
                     <div class="col-sm-3 counter">
                         <p class="counter-val">Aug 15</p>
-                        <p class="counter-desc">Upcoming Vacancy</p>
-                    </div>
-                    <div class="col-sm-3 counter">
-                        <p class="counter-val">32%</p>
-                        <p class="counter-desc">Lore</p>
-                    </div>
-                    <div class="col-sm-3 counter">
-                        <p class="counter-val">1-2</p>
-                        <p class="counter-desc">Pets Ok</p>
+                        <p class="counter-desc">Move In Date</p>
                     </div>
                 </div>
             </div>
