tenants verify-profile-1

--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -1,9 +1,7 @@
 <form method="post" class="form-horizontal vertical-buffer-xl">
 
-    <div class="pull-right">
-       <button type="button" class="btn btn-rented">Save</button>
-       <a href="#/owners/add-property/2" class="next" style="padding-left: 20px; vertical-align: sub;">Next</a>
-    </div>
+    <a href="#/owners/add-property/2" class="next pull-right" style="padding-left: 20px; vertical-align: sub;position: relative;top: -30px;left: -4px;">Next</a>
+    <button type="button" class="btn btn-rented pull-right" style="margin-right: 10px">Save</button>
 
     <h1 style="margin-top: 0px;">Property 1</h1>
 
