--- a/angular/src/app/tenant/on-boarding.tpl.html
+++ b/angular/src/app/tenant/on-boarding.tpl.html
@@ -1,1 +1,5 @@
-On Boarding
+<div class="brand-stripe" ng-include="'tenant/partials/on-boarding-navbar.tpl.html'">
+</div>
+
+<div class="container" ng-include="step">
+</div>
