tenant credit-check

--- a/angular/src/app/owner/partials/verify-profile.tpl.html
+++ b/angular/src/app/owner/partials/verify-profile.tpl.html
@@ -5,7 +5,7 @@
             <h1 style="margin-top: -10px">Owner/Manager Verification</h1>
         </div>
         <div class="col-sm-2" style="position: absolute; right: 0px;">
-           <a href="#/owners/add-property/3" class="arrow" >Next</a>
+           <a href="#/owners/add-property/3" class="next">Next</a>
         </div>
 
         
