--- a/angular/src/app/tenant/partials/ready-to-apply.tpl.html
+++ b/angular/src/app/tenant/partials/ready-to-apply.tpl.html
@@ -1,1 +1,20 @@
-apply
+<div class="vertical-buffer-xl">
+
+    <div class="row text-center" style="position: relative; margin-bottom: 80px;">
+        <h1>Qualify Tenants</h1>
+    </div>
+
+    <ol style="font-size: 24px;">
+        <li> Invite an owner
+            <div class="input-group input-group-lg vertical-buffer">
+              <input type="email" class="form-control" placeholder="owner@example.com, owner2@example.com" ng-model="inviteAddress">
+              <span class="input-group-btn">
+                <button class="btn btn-rented" type="button">Invite!</button>
+              </span>
+            </div><!-- /input-group --> 
+        </li>
+        <li>
+            <a href="http://www.craigslist.org/about/sites#US" class="next" target="_blank">Visit Craigslist to Search</a>
+        </li>
+    </ol>
+</div>
