--- a/angular/src/app/tenant/partials/ready-to-apply.tpl.html
+++ b/angular/src/app/tenant/partials/ready-to-apply.tpl.html
@@ -1,10 +1,6 @@
-<div class="vertical-buffer-xl">
+    <h1>Ready to Apply</h1>
 
-    <div class="row text-center" style="position: relative; margin-bottom: 80px;">
-        <h1>Qualify Tenants</h1>
-    </div>
-
-    <ol style="font-size: 24px;">
+    <ol style="font-size: 24px;" class="bottom-buffer-xl">
         <li> Invite an owner
             <div class="input-group input-group-lg vertical-buffer">
               <input type="email" class="form-control" placeholder="owner@example.com, owner2@example.com" ng-model="inviteAddress">
@@ -17,4 +13,3 @@
             <a href="http://www.craigslist.org/about/sites#US" class="next" target="_blank">Visit Craigslist to Search</a>
         </li>
     </ol>
-</div>
