--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -132,6 +132,10 @@ a[ng-click], a[go-back] {
   margin-bottom: 60px;
 }
 
+.bottom-buffer-xl {
+  margin-bottom: 120px;
+}
+
 .vertical-buffer {
   margin-top: 30px;
   margin-bottom: 30px;
