--- a/angular/src/less/properties.less
+++ b/angular/src/less/properties.less
@@ -48,7 +48,7 @@ body.loggedin .property-list-header {
        margin-bottom: 20px;
     }
 
-    button {
+    .btn {
        margin-top: 10px;
     }
 }
