--- a/angular/src/app/tenant/properties.tpl.html
+++ b/angular/src/app/tenant/properties.tpl.html
@@ -2,7 +2,19 @@
     <h1>My Offers</h1>
 
     <div class="row properties">
-        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4,5,6,7,8,9,10,11,12]">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4,5,6,7,8]">
+            <img pl-holder="holder.js/238x158">
+            <p><strong>Number of offers:</strong> 2</p>
+            <p><strong>Highest offer:</strong> $5000</p>
+            <p><strong>Highest Credit Score:</strong> 800</p>
+            <a href="http://www.craigslist.org/about/sites#US" class="btn btn-rented" target="_blank">See More On Craigslist</a>
+        </div>
+    </div>
+
+    <h1>My Watchlist</h1>
+
+    <div class="row properties bottom-buffer-xl">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4]">
             <img pl-holder="holder.js/238x158">
             <p><strong>Number of offers:</strong> 2</p>
             <p><strong>Highest offer:</strong> $5000</p>
