--- a/angular/src/app/owner/properties.tpl.html
+++ b/angular/src/app/owner/properties.tpl.html
@@ -2,58 +2,7 @@
     <h1>Active Properties</h1>
 
     <div class="row properties">
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-    </div>
-    <div class="row properties top-buffer-lg">
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4,5,6,7,8]">
             <img pl-holder="holder.js/238x158">
             <p><strong>Number of offers:</strong> 2</p>
             <p><strong>Highest offer:</strong> $5000</p>
@@ -64,29 +13,8 @@
 
     <h1>Tenant Occupied</h1>
 
-    <div class="row properties bottom-buffer-lg">
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Number of offers:</strong> 2</p>
-            <p><strong>Highest offer:</strong> $5000</p>
-            <p><strong>Highest Credit Score:</strong> 800</p>
-            <button type="button" class="btn btn-rented">See More</button>
-        </div>
-        <div class="col-sm-3">
+    <div class="row properties bottom-buffer-xl">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4]">
             <img pl-holder="holder.js/238x158">
             <p><strong>Number of offers:</strong> 2</p>
             <p><strong>Highest offer:</strong> $5000</p>
