--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -1,6 +1,7 @@
 @import "../assets/css/bootstrap.min.css";
 //@import "../assets/css/font-awesome.css";
 @import "../assets/libraries/flexslider/flexslider.css";
+@import "../../vendor/famous-angular/dist/famous-angular.css";
 
 @import "variables.less";
 @import "../app/user/less/login.less";
