--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -1,15 +1,15 @@
 <div class="container">
-    <form method="post" class="form-horizontal">
+    <form method="post" class="form-horizontal bottom-buffer-xl">
 
         <button type="button" class="btn btn-rented pull-right" ng-click="save()">Save</button>
 
         <h1>My Profile</h1>
 
-        <div class="row">
 
-            <fieldset class="fieldset-required">
-               <legend>Contact</legend>
-               
+        <fieldset class="fieldset-required">
+           <legend>Contact</legend>
+           
+           <div class="row">
                <div class="col-sm-2">
                     <span class="fileinput-button">
                        <img class="media-object img-circle" alt="Upload your picture..." style="display: inline; margin-bottom: 10px;" ng-src="{{profile.picture || 'assets/img/avatar.png'}}">
@@ -17,93 +17,103 @@
                     </span>
                </div>
 
-               <div class="col-sm-5">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">First</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+               <div class="col-sm-10">
+                   <div class="row">
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">First</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.firstName" placeholder="Bob">
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">Last</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson">
+                               </div>
+                           </div>
                        </div>
                    </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Phone</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000">
+                   <div class="row">
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">E-Mail</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com">
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-sm-6">
+                           <div class="form-group">
+                               <label class="col-sm-4 control-label">Phone</label>
+                               <div class="col-sm-8">
+                                  <input class="form-control input-lg" type="tel" ng-model="profile.phone" placeholder="000.000.000">
+                               </div>
+                           </div>
                        </div>
                    </div>
                </div>
+           </div>
 
-               <div class="col-sm-5">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Last</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="profile.lastName" placeholder="Johnson">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">E-Mail</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="bob@gmail.com">
-                       </div>
-                   </div>
-               </div>
-            </fieldset>
+        </fieldset>
 
-        </div>
+        <fieldset>
+            <legend>Address</legend>
 
-        <div class="row">
-
-            <fieldset class="fieldset-required">
-               <legend>Address</legend>
+            <div class="row">
 
                <div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-4 control-label">Street</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.street">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">City</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.city">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Zip</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.zip">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.street">
                        </div>
                    </div>
                </div>
-
                <div class="col-sm-6">
                    <div class="form-group">
                        <label class="col-sm-4 control-label">Apt. number</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.aptNumber">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">State</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.state">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.aptNumber">
                        </div>
                    </div>
                </div>
 
-            </fieldset>
+            </div>
 
-        </div>
+            <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">City</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.city">
+                       </div>
+                   </div>
+               </div>
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">State</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.state">
+                       </div>
+                   </div>
+               </div>
+            </div>
 
-        <div class="row">
+            <div class="row">
+               <div class="col-sm-6">
+                   <div class="form-group">
+                       <label class="col-sm-4 control-label">Zip</label>
+                       <div class="col-sm-8">
+                          <input class="form-control input-lg" type="text" ng-model="profile.address.zip">
+                       </div>
+                   </div>
+               </div>
+            </div>
 
-            <fieldset class="fieldset-required">
-               <legend>Credit Info</legend>
-
-               <p class="text-lg">Lorem Ipsum</p>
-            </fieldset>
-
-        </div>
+        </fieldset>
 
     </form>
 
